Change health endpoint definition.
